--- a/src/onegov/swissvotes/locale/de_CH/LC_MESSAGES/onegov.swissvotes.po
+++ b/src/onegov/swissvotes/locale/de_CH/LC_MESSAGES/onegov.swissvotes.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2024-03-28 15:10+0100\n"
+"POT-Creation-Date: 2024-04-11 13:43+0200\n"
 "PO-Revision-Date: 2021-01-07 09:13+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -1779,6 +1779,16 @@ msgstr ""
 msgid "Online information by the federal authorities"
 msgstr "Online-Informationen der Behörden"
 
+msgid ""
+"For future votes, links to the current versions of the websites are provided "
+"here. For past votes, the links lead to the archived versions of the "
+"websites so as to show the status prior to the respective vote."
+msgstr ""
+"Bei künftigen Abstimmungen wird hier auf die aktuellen Versionen der "
+"Websites verlinkt. Bei vergangenen Abstimmungen führen die Links zu den "
+"archivierten Versionen der Websites, um den Stand vor der jeweiligen "
+"Abstimmung abzubilden."
+
 msgid "Link Federal Council"
 msgstr "Link Bundesrat"
 
@@ -1889,26 +1899,26 @@ msgid "(predominantly negative)"
 msgstr "(mehrheitlich ablehnend)"
 
 msgid ""
-"The information is taken from the website of the Swiss Federal Audit Office, "
-"which in turn points out that the data is published as it was reported to "
-"the SFAO by the actors subject to disclosure requirements.<br><br>Total "
-"revenue and largest donors according to the final statement, which is "
-"published 75 days after the vote."
+"This information has been taken from the website of the Swiss Federal Audit "
+"Office, which for its part points out that the data is published in the form "
+"in which it was reported to the SFAO by the actors subject to disclosure "
+"requirements.<br><br>Total receipts and largest donors are shown according "
+"to the final statement, which is published 75 days after the vote"
 msgstr ""
 "Die Angaben stammen von der Website der Eidgenössischen Finanzkontrolle, die "
 "ihrerseits darauf hinweist, dass die Daten so publiziert werden, wie sie der "
-"EFK von den offenlegungspflichten Akteur:innen gemeldet worden sind."
+"EFK von den offenlegungspflichtigen Akteur:innen gemeldet worden sind."
 "<br><br>Gesamteinnahmen und grösste Geldgeber:innen gemäss "
 "Schlussabrechnung, die 75 Tage nach der Abstimmung veröffentlicht wird."
 
-msgid "Total receipts of ‘yes’ camp"
-msgstr "Gesamteinnahmen Ja-Lager"
+msgid "Total receipts of ‘yes’ campaign:"
+msgstr "Gesamteinnahmen Ja-Lager:"
 
-msgid "largest donors"
-msgstr "grösste Geldgeber:innen"
+msgid "largest donors:"
+msgstr "grösste Geldgeber:innen:"
 
-msgid "Total receipts of ‘no’ camp"
-msgstr "Gesamteinnahmen Nein-Lager"
+msgid "Total receipts of ‘no’ campaign:"
+msgstr "Gesamteinnahmen Nein-Lager:"
 
 msgid "Display the list of documents"
 msgstr "Liste der Dokumente anzeigen"
