--- a/src/onegov/landsgemeinde/locale/de_CH/LC_MESSAGES/onegov.landsgemeinde.po
+++ b/src/onegov/landsgemeinde/locale/de_CH/LC_MESSAGES/onegov.landsgemeinde.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2024-02-07 14:26+0100\n"
+"POT-Creation-Date: 2024-04-13 09:36+0200\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Language-Team: German\n"
 "Language: de_CH\n"
@@ -167,6 +167,9 @@ msgstr "Antrag"
 
 msgid "Statement of reasons"
 msgstr "Begründung"
+
+msgid "Invalid timestamp."
+msgstr "Ungültiger Zeitstempel."
 
 #, python-format
 msgid "Agenda items of assembly from ${date}"
