--- a/src/onegov/election_day/locale/de_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/de_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-03-08 09:16+0100\n"
+"POT-Creation-Date: 2024-04-14 08:27+0200\n"
 "PO-Revision-Date: 2022-03-24 15:35+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -86,10 +86,6 @@ msgstr "Leerer Wert: ${col}"
 #, python-format
 msgid "Invalid integer: ${col}"
 msgstr "Ungültige Ganzzahl: ${col}"
-
-#, python-format
-msgid "Invalid float number: ${col}"
-msgstr "Ungültige Fliesskommazahl: ${col}"
 
 #, python-format
 msgid "Invalid decimal number: ${col}"
@@ -657,6 +653,9 @@ msgstr "Externe ID des Gegenvorschlags"
 
 msgid "External ID of tie breaker"
 msgstr "Externe ID der Stichfrage"
+
+msgid "Display as tie-breaker"
+msgstr "Als Stichfrage darstellen"
 
 msgid "Title of the the vote/proposal"
 msgstr "Titel der Abstimmung/der Vorlage"
