--- a/src/onegov/election_day/locale/it_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/it_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-03-08 09:16+0100\n"
+"POT-Creation-Date: 2024-04-14 08:27+0200\n"
 "PO-Revision-Date: 2022-03-22 08:00+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -85,10 +85,6 @@ msgstr "Valore vuoto: ${col}"
 #, python-format
 msgid "Invalid integer: ${col}"
 msgstr "numero intero non valido: ${col}"
-
-#, python-format
-msgid "Invalid float number: ${col}"
-msgstr "numero di galleggiante non valido: ${col}"
 
 #, python-format
 msgid "Invalid decimal number: ${col}"
@@ -652,6 +648,9 @@ msgstr "ID esterno del controprogetto"
 
 msgid "External ID of tie breaker"
 msgstr "ID esterno della domanda risolutiva"
+
+msgid "Display as tie-breaker"
+msgstr "Visualizzare come domanda risolutiva"
 
 msgid "Title of the the vote/proposal"
 msgstr "Titolo del voto/iniziativa"
