--- a/src/onegov/landsgemeinde/locale/de_CH/LC_MESSAGES/onegov.landsgemeinde.po
+++ b/src/onegov/landsgemeinde/locale/de_CH/LC_MESSAGES/onegov.landsgemeinde.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2024-04-17 10:51+0200\n"
+"POT-Creation-Date: 2024-04-19 08:27+0200\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Language-Team: German\n"
 "Language: de_CH\n"
@@ -69,28 +69,34 @@ msgstr ""
 msgid "Alternatively: Page from the Memorial"
 msgstr "Alternativ: Seite aus dem Memorial"
 
-msgid ""
-"If the start field is filled and the video timestamp field is left empty, a "
-"timestamp is automatically calculated based on the start time of the agenda "
-"item in relation to the start time of the live broadcast."
-msgstr ""
-"Wird das Start-Feld gefüllt und das Video-Zeitstempel-Feld leer gelassen "
-"wird automatisch ein Zeitstempel anhand der Startzeit des Traktandums in "
-"Relation zur Startzeit der Live-Übertragung berechnet."
+msgid "Start"
+msgstr "Start"
 
 msgid "Progress"
 msgstr "Ablauf"
 
-msgid "Start"
-msgstr "Start"
-
 msgid "Automatically updated when agenda item changed to ongoing."
 msgstr ""
-"Wird automatisch aktualisiert, wenn das Traktandum auf 'laufend' gesetzt "
-"wird."
+"Automatisch aktualisiert, wenn das Traktandum auf 'laufend' gesetzt wird."
+
+msgid "Calculated video timestamp"
+msgstr "Berechneter Video-Zeitstempel"
+
+msgid ""
+"Calculated automatically based on the start time of the agenda item and the "
+"start time of of the livestream of the assembly ."
+msgstr ""
+"Automatisch berechnet anhand der Startzeit des Traktandums und der Startzeit "
+"des Livestreams der Landsgemeinde."
 
 msgid "Video timestamp"
 msgstr "Video-Zeitstempel"
+
+msgid "Manual video timestamp"
+msgstr "Manueller Video-Zeitstempel"
+
+msgid "Overrides the calculated video timestamp."
+msgstr "Übersteuert den berechneten Videozeitstempel."
 
 msgid "Text"
 msgstr "Text"
@@ -115,9 +121,6 @@ msgstr "Nummer wird bereits verwendet."
 
 msgid "Invalid timestamp."
 msgstr "Ungültiger Zeitstempel."
-
-msgid "Automatically calculated timestamp: "
-msgstr "Automatisch berechneter Zeitstempel: "
 
 msgid "Date"
 msgstr "Datum"
@@ -193,6 +196,17 @@ msgstr "Ort"
 
 msgid "Picture"
 msgstr "Bild"
+
+msgid "Automatically updated when votum changed to ongoing."
+msgstr ""
+"Automatisch aktualisiert, wenn die Wortmeldung auf 'laufend' gesetzt wird."
+
+msgid ""
+"Calculated automatically based on the start time of the votum and the start "
+"time of of the livestream of the assembly."
+msgstr ""
+"Automatisch berechnet anhand der Startzeit der Wortmeldung und der Startzeit "
+"des Livestreams der Landsgemeinde."
 
 msgid "Motion"
 msgstr "Antrag"
@@ -356,3 +370,23 @@ msgstr "Neue Wortmeldung hinzugefügt"
 
 msgid "New votum"
 msgstr "Neue Wortmeldung"
+
+#~ msgid ""
+#~ "If the start field is filled and the video timestamp field is left empty, "
+#~ "a timestamp is automatically calculated based on the start time of the "
+#~ "agenda item in relation to the start time of the live broadcast."
+#~ msgstr ""
+#~ "Wird das Start-Feld gefüllt und das Video-Zeitstempel-Feld leer gelassen "
+#~ "wird automatisch ein Zeitstempel anhand der Startzeit des Traktandums in "
+#~ "Relation zur Startzeit der Live-Übertragung berechnet."
+
+#, python-format
+#~ msgid "Automatically calculated timestamp: ${timestamp}"
+#~ msgstr "Automatisch berechneter Zeitstempel: ${timestamp}"
+
+#~ msgid ""
+#~ "Calculated automatically based on the start times of the assembly and the "
+#~ "votum."
+#~ msgstr ""
+#~ "Automatisch berechnet anhand der Startzeit der Landsgemeinde und der "
+#~ "Wortmeldung."
