--- a/src/onegov/landsgemeinde/locale/de_CH/LC_MESSAGES/onegov.landsgemeinde.po
+++ b/src/onegov/landsgemeinde/locale/de_CH/LC_MESSAGES/onegov.landsgemeinde.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2024-04-13 09:36+0200\n"
+"POT-Creation-Date: 2024-04-19 08:27+0200\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Language-Team: German\n"
 "Language: de_CH\n"
@@ -77,11 +77,26 @@ msgstr "Ablauf"
 
 msgid "Automatically updated when agenda item changed to ongoing."
 msgstr ""
-"Wird automatisch aktualisiert, wenn das Traktandum auf 'laufend' gesetzt "
-"wird."
+"Automatisch aktualisiert, wenn das Traktandum auf 'laufend' gesetzt wird."
+
+msgid "Calculated video timestamp"
+msgstr "Berechneter Video-Zeitstempel"
+
+msgid ""
+"Calculated automatically based on the start time of the agenda item and the "
+"start time of of the livestream of the assembly ."
+msgstr ""
+"Automatisch berechnet anhand der Startzeit des Traktandums und der Startzeit "
+"des Livestreams der Landsgemeinde."
 
 msgid "Video timestamp"
 msgstr "Video-Zeitstempel"
+
+msgid "Manual video timestamp"
+msgstr "Manueller Video-Zeitstempel"
+
+msgid "Overrides the calculated video timestamp."
+msgstr "Übersteuert den berechneten Videozeitstempel."
 
 msgid "Text"
 msgstr "Text"
@@ -104,14 +119,34 @@ msgstr "Schlagworte"
 msgid "Number already used."
 msgstr "Nummer wird bereits verwendet."
 
+msgid "Invalid timestamp."
+msgstr "Ungültiger Zeitstempel."
+
 msgid "Date"
 msgstr "Datum"
 
 msgid "Extraordinary"
 msgstr "Ausserordentlich"
 
+msgid ""
+"To embed a youtube video first click on the \"share\" button then on the "
+"\"embed\" button. Copy the URL of the src attribute."
+msgstr ""
+"Um ein YouTube-Video einzubetten, klicken Sie zuerst auf die Schaltfläche "
+"\"share\" und dann auf die Schaltfläche \"einbetten\". Kopieren Sie die URL "
+"des src-Attributs."
+
+msgid "Video"
+msgstr "Video"
+
 msgid "Video URL"
 msgstr "Video URL"
+
+msgid "The URL to the video of the assembly."
+msgstr "Die URL zum Video der Landsgemeinde."
+
+msgid "Start time of the livestream"
+msgstr "Startzeit des Livestreams"
 
 msgid "Memorial part 1 (PDF)"
 msgstr "Memorial Teil 1 (PDF)"
@@ -162,14 +197,22 @@ msgstr "Ort"
 msgid "Picture"
 msgstr "Bild"
 
+msgid "Automatically updated when votum changed to ongoing."
+msgstr ""
+"Automatisch aktualisiert, wenn die Wortmeldung auf 'laufend' gesetzt wird."
+
+msgid ""
+"Calculated automatically based on the start time of the votum and the start "
+"time of of the livestream of the assembly."
+msgstr ""
+"Automatisch berechnet anhand der Startzeit der Wortmeldung und der Startzeit "
+"des Livestreams der Landsgemeinde."
+
 msgid "Motion"
 msgstr "Antrag"
 
 msgid "Statement of reasons"
 msgstr "Begründung"
-
-msgid "Invalid timestamp."
-msgstr "Ungültiger Zeitstempel."
 
 #, python-format
 msgid "Agenda items of assembly from ${date}"
@@ -255,9 +298,6 @@ msgstr "laufend"
 
 msgid "completed"
 msgstr "abgeschlossen"
-
-msgid "Video"
-msgstr "Video"
 
 msgid "Memorial (PDF)"
 msgstr "Memorial (PDF)"
