--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -5697,8 +5697,13 @@ msgstr "Inhalt löschen"
 msgid "Delete content when expired"
 msgstr "Inhalt löschen wenn er abgelaufen ist"
 
-msgid "This content is automatically deleted when the end date has passed. If "
-"no end date is set, it will be deleted one day after start date."
-msgstr "Dieser Inhalt wird automatisch gelöscht, wenn das Enddatum "
-"überschritten ist. Wenn kein Enddatum festgelegt ist, wird er einen Tag "
-"nach dem Startdatum gelöscht."
+msgid "This content is automatically deleted if the end date is in the past"
+msgstr "Dieser Inhalt wird automatisch gelöscht wenn das Enddatum in der "
+"Vergangenheit liegt"
+
+msgid "Delete events in the past"
+msgstr "Vergangene Veranstaltungen löschen"
+
+msgid "Events are automatically deleted once they have occurred"
+msgstr "Veranstaltungen werden automatisch gelöscht, sobald sie in der "
+"Vergangenheit liegen"
