--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -5716,8 +5716,13 @@ msgstr "Supprimer le contenu"
 msgid "Delete content when expired"
 msgstr "Supprimer le contenu lorsqu'il est expiré"
 
-msgid "This content is automatically deleted when the end date has passed. If "
-"no end date is set, it will be deleted one day after start date."
+msgid "This content is automatically deleted if the end date is in the past"
 msgstr "Ce contenu est automatiquement supprimé lorsque la date de fin est "
-"dépassée. Si aucune date de fin n'est définie, il sera supprimé un jour "
-"après la date de début."
+"dépassée"
+
+msgid "Delete events in the past"
+msgstr "Supprimer les événements passés"
+
+msgid "Events are automatically deleted once they have occurred"
+msgstr "Les événements sont automatiquement supprimés une fois qu'ils se sont "
+"produits"
