--- a/src/onegov/pas/locale/de_CH/LC_MESSAGES/onegov.pas.po
+++ b/src/onegov/pas/locale/de_CH/LC_MESSAGES/onegov.pas.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2024-03-19 14:09+0100\n"
+"POT-Creation-Date: 2024-04-22 08:40+0200\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Language-Team: German\n"
 "Language: de_CH\n"
@@ -79,6 +79,12 @@ msgstr "Beschreibung"
 
 msgid "Function"
 msgstr "Funktion"
+
+msgid "Year"
+msgstr "Jahr"
+
+msgid "Percentage"
+msgstr "Prozent"
 
 msgid "Personnel number"
 msgstr "Personalnummer"
@@ -239,6 +245,18 @@ msgstr "Diese:n Parlamentarier:in wirklich entfernen?"
 msgid "Remove parliamentarian"
 msgstr "Parlamentarier:in entfernen"
 
+msgid "Cost of living adjustments"
+msgstr "Teuerungszulagen"
+
+msgid "Cost of living adjustment"
+msgstr "Teuerungszulage"
+
+msgid "Do you really want to delete this cost of living adjustment?"
+msgstr "Möchten Sie diese Teuerungszulage wirklich löschen?"
+
+msgid "Delete cost of living adjustment"
+msgstr "Teuerungszulage löschen"
+
 msgid "Legislative period"
 msgstr "Legislatur"
 
@@ -354,6 +372,9 @@ msgstr "Noch keine Kommissionen erfasst."
 msgid "Filters"
 msgstr "Filter"
 
+msgid "No cost of living adjustments defined yet."
+msgstr "Noch keine Teuerungszulage erfasst."
+
 msgid "Skip navigation"
 msgstr "Navigation überspringen"
 
@@ -432,6 +453,12 @@ msgstr "Kommissionsitzung hinzugefügt"
 
 msgid "New commission meeting"
 msgstr "Neue Kommissionsitzung"
+
+msgid "Added a new cost of living adjustment"
+msgstr "Teuerungszulage hinzugefügt"
+
+msgid "New cost of living adjustment"
+msgstr "Neue Teuerungszulage"
 
 msgid "Dashboard"
 msgstr "Dashboard"
