--- a/src/onegov/pas/locale/de_CH/LC_MESSAGES/onegov.pas.po
+++ b/src/onegov/pas/locale/de_CH/LC_MESSAGES/onegov.pas.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2024-04-22 13:24+0200\n"
+"POT-Creation-Date: 2024-04-22 14:20+0200\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Language-Team: German\n"
 "Language: de_CH\n"
@@ -73,16 +73,6 @@ msgstr "Beschreibung"
 
 msgid "Function"
 msgstr "Funktion"
-
-msgid "Year"
-msgstr "Jahr"
-
-msgid "Percentage"
-msgstr "Prozent"
-
-#, python-format
-msgid "Cost of living adjustment for ${year} alredy exists"
-msgstr "Teuerungszulage für ${year} bereits erfasst"
 
 msgid "Personnel number"
 msgstr "Personalnummer"
@@ -195,6 +185,15 @@ msgstr "Rolle in der Fraktion"
 msgid "Portrait"
 msgstr "Portrait"
 
+msgid "Year"
+msgstr "Jahr"
+
+msgid "Cost of living adjustment"
+msgstr "Teuerungszulage"
+
+msgid "Percentage"
+msgstr "Prozent"
+
 msgid "President"
 msgstr "Präsident:in"
 
@@ -291,18 +290,6 @@ msgstr "Diese:n Parlamentarier:in wirklich entfernen?"
 
 msgid "Remove parliamentarian"
 msgstr "Parlamentarier:in entfernen"
-
-msgid "Cost of living adjustments"
-msgstr "Teuerungszulagen"
-
-msgid "Cost of living adjustment"
-msgstr "Teuerungszulage"
-
-msgid "Do you really want to delete this cost of living adjustment?"
-msgstr "Möchten Sie diese Teuerungszulage wirklich löschen?"
-
-msgid "Delete cost of living adjustment"
-msgstr "Teuerungszulage löschen"
 
 msgid "Legislative periods"
 msgstr "Legislaturen"
@@ -425,9 +412,6 @@ msgstr "Noch keine Kommissionen erfasst."
 msgid "Filters"
 msgstr "Filter"
 
-msgid "No cost of living adjustments defined yet."
-msgstr "Noch keine Teuerungszulage erfasst."
-
 msgid "Skip navigation"
 msgstr "Navigation überspringen"
 
@@ -464,6 +448,9 @@ msgstr "Noch keine Fraktionen erfasst."
 
 msgid "No parties defined yet."
 msgstr "Noch keine Parteien erfasst."
+
+msgid "Amount"
+msgstr "Betrag"
 
 msgid "No rate sets defined yet."
 msgstr "Noch keine Sätze erfasst."
@@ -509,12 +496,6 @@ msgstr "Kommissionsitzung hinzugefügt"
 
 msgid "New commission meeting"
 msgstr "Neue Kommissionsitzung"
-
-msgid "Added a new cost of living adjustment"
-msgstr "Teuerungszulage hinzugefügt"
-
-msgid "New cost of living adjustment"
-msgstr "Neue Teuerungszulage"
 
 msgid "Dashboard"
 msgstr "Dashboard"
