--- a/src/onegov/feriennet/locale/it_CH/LC_MESSAGES/onegov.feriennet.po
+++ b/src/onegov/feriennet/locale/it_CH/LC_MESSAGES/onegov.feriennet.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2023-06-12 14:30+0200\n"
+"POT-Creation-Date: 2024-04-22 14:55+0200\n"
 "PO-Revision-Date: 2021-11-11 09:07+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -2080,6 +2080,9 @@ msgstr "Cancellare"
 
 msgid "Enroll your child now."
 msgstr "Iscriva ora suo figlio/a."
+
+msgid "Enrolling not possible."
+msgstr "Iscrizione non possibile."
 
 msgid "Enroll"
 msgstr "Iscrizione"
