--- a/src/onegov/feriennet/locale/de_CH/LC_MESSAGES/onegov.feriennet.po
+++ b/src/onegov/feriennet/locale/de_CH/LC_MESSAGES/onegov.feriennet.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2023-06-12 14:30+0200\n"
+"POT-Creation-Date: 2024-04-22 14:55+0200\n"
 "PO-Revision-Date: 2021-11-11 09:08+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -2086,6 +2086,9 @@ msgstr "Löschen"
 
 msgid "Enroll your child now."
 msgstr "Jetzt anmelden."
+
+msgid "Enrolling not possible."
+msgstr "Anmeldungen nicht möglich."
 
 msgid "Enroll"
 msgstr "Anmelden"
