--- a/src/onegov/swissvotes/locale/en_US/LC_MESSAGES/onegov.swissvotes.po
+++ b/src/onegov/swissvotes/locale/en_US/LC_MESSAGES/onegov.swissvotes.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2024-04-11 13:43+0200\n"
+"POT-Creation-Date: 2024-04-28 15:08+0200\n"
 "PO-Revision-Date: 2021-01-07 09:11+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -1847,6 +1847,13 @@ msgstr "Explainer video by easyvote"
 
 msgid "Campaign websites"
 msgstr "Campaign websites"
+
+msgid ""
+"The links lead to the archived versions of the websites so as to show the "
+"status prior to the respective vote."
+msgstr ""
+"The links lead to the archived versions of the websites so as to show the "
+"status prior to the respective vote."
 
 msgid "Recommendations of the Parties"
 msgstr "Recommendations by parties"
