--- a/src/onegov/feriennet/locale/fr_CH/LC_MESSAGES/onegov.feriennet.po
+++ b/src/onegov/feriennet/locale/fr_CH/LC_MESSAGES/onegov.feriennet.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2023-06-12 14:30+0200\n"
+"POT-Creation-Date: 2024-05-07 08:34+0200\n"
 "PO-Revision-Date: 2021-11-11 09:07+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -2589,6 +2589,9 @@ msgstr "Nouvelle activité"
 msgid "Your changes were saved"
 msgstr "Vos modifications ont été enregistrées"
 
+msgid "Edit Activity"
+msgstr "Modifier l'activité"
+
 msgid "The activity was discarded"
 msgstr "L'offre a été refusée"
 
@@ -2596,7 +2599,7 @@ msgid "Your ticket has been opened"
 msgstr "Votre ticket a été ouvert"
 
 msgid "New ticket"
-msgstr ""
+msgstr "Nouveau ticket"
 
 msgid "Thank you for your proposal!"
 msgstr "Merci pour votre proposition !"
