--- a/src/onegov/feriennet/locale/it_CH/LC_MESSAGES/onegov.feriennet.po
+++ b/src/onegov/feriennet/locale/it_CH/LC_MESSAGES/onegov.feriennet.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2023-06-12 14:30+0200\n"
+"POT-Creation-Date: 2024-05-07 08:34+0200\n"
 "PO-Revision-Date: 2021-11-11 09:07+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -2570,6 +2570,9 @@ msgstr "Nuova attività"
 msgid "Your changes were saved"
 msgstr "Le modifiche sono state salvate"
 
+msgid "Edit Activity"
+msgstr "Modifica attività"
+
 msgid "The activity was discarded"
 msgstr "L'attività è stata rifiutata"
 
@@ -2577,7 +2580,7 @@ msgid "Your ticket has been opened"
 msgstr "Il biglietto è stato aperto"
 
 msgid "New ticket"
-msgstr ""
+msgstr "Nuovo biglietto"
 
 msgid "Thank you for your proposal!"
 msgstr "Grazie per la vostra applicazione!"
