Election Day: Add the option to also clear existing ballots of a vote.
TYPE: Feature
LINK: OGC-1572

--- a/src/onegov/election_day/locale/de_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/de_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-26 13:21+0200\n"
+"POT-Creation-Date: 2024-05-16 06:53+0200\n"
 "PO-Revision-Date: 2022-03-24 15:35+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -271,8 +271,8 @@ msgstr "Regional"
 msgid "Communal"
 msgstr "Kommunal"
 
-msgid "Also clear candidates, lists and list connections."
-msgstr "Lösche auch Kandiderende, Listen und Listenverbindungen."
+msgid "Clear everything"
+msgstr "Lösche alles"
 
 msgid ""
 "Beware that some formats such as eCH ship candidates, lists and list "
