--- a/src/onegov/election_day/locale/rm_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/rm_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-26 13:21+0200\n"
+"POT-Creation-Date: 2024-05-16 06:53+0200\n"
 "PO-Revision-Date: 2022-03-22 08:01+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -275,9 +275,8 @@ msgstr "Plaun regiunal"
 msgid "Communal"
 msgstr "Plaun communal"
 
-msgid "Also clear candidates, lists and list connections."
-msgstr ""
-"Per stizzar er persunas che candideschan, glistas e colliaziuns da glistas."
+msgid "Clear everything"
+msgstr "Sguota tut"
 
 msgid ""
 "Beware that some formats such as eCH ship candidates, lists and list "
