--- a/src/onegov/feriennet/locale/fr_CH/LC_MESSAGES/onegov.feriennet.po
+++ b/src/onegov/feriennet/locale/fr_CH/LC_MESSAGES/onegov.feriennet.po
@@ -2288,6 +2288,9 @@ msgstr "Activité archivée."
 msgid "Activity reassigned from ${old_username} to ${new_username}."
 msgstr "Activité attribuée à ${old_username} à ${new_username}."
 
+msgid "Activity reassigned."
+msgstr "Activité attribuée."
+
 msgid "Period activated."
 msgstr "Période activée."
 
