--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -677,6 +677,9 @@ msgstr "Neuer Eintrag"
 msgid "Directory"
 msgstr "Verzeichnis"
 
+msgid "Frequently Asked Questions Directory"
+msgstr "Verzeichnis für Häufig gestellte Fragen"
+
 msgid "Functions:"
 msgstr "Funktionen:"
 
