--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -675,6 +675,9 @@ msgstr "Nouvelle entrée"
 msgid "Directory"
 msgstr "Dossier"
 
+msgid "Frequently Asked Questions Directory"
+msgstr "Répertoire des questions fréquemment posées"
+
 msgid "Functions:"
 msgstr "Fonctions:"
 
